Bug 46737 - bfin-elf --enable-werror-always build fails for 64 bit host
Summary: bfin-elf --enable-werror-always build fails for 64 bit host
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks: enable-werror-always
  Show dependency treegraph
 
Reported: 2010-12-01 02:18 UTC by Jorn Wolfgang Rennecke
Modified: 2010-12-10 03:14 UTC (History)
0 users

See Also:
Host: x86_64-linux-gnu
Target: bfin-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2010-12-01 02:18:37 UTC
../../../gcc/gcc/config/bfin/bfin.c: In function ‘bfin_reorder_loops’:
../../../gcc/gcc/config/bfin/bfin.c:4695:12: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
../../../gcc/gcc/config/bfin/bfin.c:4697:11: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
../../../gcc/gcc/config/bfin/bfin.c:4697:39: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
../../../gcc/gcc/config/bfin/bfin.c:4703:11: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
../../../gcc/gcc/config/bfin/bfin.c:4703:36: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
Comment 1 Jorn Wolfgang Rennecke 2010-12-07 10:46:28 UTC
Author: amylaar
Date: Tue Dec  7 10:46:24 2010
New Revision: 167532

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=167532
Log:
2010-12-07  Joern Rennecke  <amylaar@spamcop.net>
	    Richard Guenther  <rguenther@suse.de>

	PR target/46737
	* config/bfin/bfin.c (BB_AUX_INDEX): Cast to intptr_t.
	(bfin_reorder_loops): Change type of index to intptr_t.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/bfin/bfin.c
Comment 2 Jorn Wolfgang Rennecke 2010-12-10 03:14:38 UTC
Patch has been applied to trunk.