re PR target/46737 (bfin-elf --enable-werror-always build fails for 64 bit host)

2010-12-07  Joern Rennecke  <amylaar@spamcop.net>
	    Richard Guenther  <rguenther@suse.de>

	PR target/46737
	* config/bfin/bfin.c (BB_AUX_INDEX): Cast to intptr_t.
	(bfin_reorder_loops): Change type of index to intptr_t.

Co-Authored-By: Richard Guenther <rguenther@suse.de>

From-SVN: r167532